# TextGraphs17-shared-task

./: .gitignore  TASK2_TRAINING.md  pyproject.toml  task2_pipeline.py
evaluation/: evaluate.py
