[project]
name = "textgraphs17-task2"
version = "0.1.0"
description = "Training and inference pipeline for TextGraphs17 shared task 2."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "tqdm>=4.66.0",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
